# bookhelper

./: README.md  pyproject.toml
src/dataset/: __main__.py
src/trainer/: __main__.py
