[project]
name = "bookhelper"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "sander-hergarten", email = "mail@sander-hergarten.de" }
]
dependencies = [
    "torch>=2.5.1",
    "transformers>=4.47.1",
    "datasets>=3.2.0",
    "peft>=0.14.0",
    "accelerate>=1.2.1",
    "bitsandbytes>=0.42.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bookhelper"]
